getting swagger api_doc working on localhost
